<resources>

    <!-- App Name -->
    <string name="app_name">Driver</string>

    <!-- Labels -->
    <string name="label_cancel">Cancel</string>
    <string name="label_ok">OK</string>
    <string name="label_skip">Skip</string>
    <string name="label_next">Next</string>
    <string name="label_finish">Finish</string>
    <string name="label_previous">Previous</string>
    <string name="label_submit">Submit</string>
    <string name="label_update">Update</string>
    <string name="label_edit">Edit</string>
    <string name="label_download">Download</string>
    <string name="label_successful">Successful</string>
    <string name="label_unsuccessful">Unsuccessful</string>
    <string name="label_success">Success</string>
    <string name="label_failure">Failure</string>

    <!-- Titles -->
    <string name="retry">Retry</string>
    <string name="mobile_no">Mobile No</string>
    <string name="email_mobile_no">Email / Mobile No</string>
    <string name="email_id">Email Id</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="reset_password">Reset Password</string>
    <string name="sign_in_here">Sign in here</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="microphone">Microphone</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="storage">Storage</string>
    <string name="phone">Phone</string>
    <string name="location">Location</string>
    <string name="warning">Warning</string>
    <string name="alert">Alert</string>
    <string name="welcome">Welcome ,</string>
    <string name="register">Register</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="sign_up_to_register">Enter details to register yourself</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_user">New User?</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="account">Account</string>
    <string name="trip_info">Trip Info</string>
    <string name="sign_out">Sign Out</string>
    <string name="earnings">Earnings</string>
    <string name="notification">Notification</string>
    <string name="settings">Settings</string>
    <string name="permissions_required">Permissions required</string>
    <string name="permissions_granted">Permissions granted</string>
    <string name="on_duty">ON Duty</string>
    <string name="off_duty">OFF Duty</string>
    <string name="app_service">App Service</string>
    <string name="location_service_running">Location service running</string>

    <!-- Messages -->
    <string name="microphone_perm_message">Microphone permission is needed to record audio while recording video</string>
    <string name="camera_perm_message">This permission is needed to implement the feature to capture, record users video along with screen recording</string>
    <string name="storage_perm_message">Storage permission is needed to save the recorded videos and perform the other necessary functionality</string>
    <string name="phone_perm_message">The phone permission is needed to implement the feature pause recording on incoming call</string>
    <string name="location_perm_message">Location permission is needed to capture the latitude an longitude for the tracing</string>
    <string name="user_register_success">User registered successfully</string>
    <string name="reset_password_message">We just need your registered Email Id to send you password reset instructions.</string>
    <string name="reset_password_sent_message">We just sent a mail to your registered Email Id to reset your password.</string>
    <string name="location_off_duty_msg">Note : Location services will not be tracked when OFF duty.</string>
    <string name="location_on_duty_msg">Note : Location services will be tracked when ON duty.</string>
    <string name="background_location_msg_alert">Kindly allow background location permission for tracking and tracing the vehicle and shipment purposes.This is used only when the driver is ON duty.!</string>
    <string name="background_location_off">Background location capturing is turned off.</string>
    <string name="background_location_on">Background location capturing is turned on.</string>
    <string name="off_duty_msg">You\'r on off duty</string>
    <string name="pip_perm_msg_alert">Kindly allow picture in picture permission  to show current location in map in Pip mode.To Allow</string>

    <!--Disabled Messages -->
    <string name="microphone_disable_perm_message">Microphone permission is denied, Please go to settings to allow permission manually.</string>
    <string name="camera_disable_perm_message">Camera permission is denied, Please go to settings to allow permission manually.</string>
    <string name="storage_disable_perm_message">Storage permission is denied, Please go to settings to allow permission manually.</string>
    <string name="phone_disable_perm_message">Phone permission is denied, Please go to settings to allow permission manually.</string>
    <string name="location_disable_perm_message">Location permission is denied, Please go to settings to allow permission manually.</string>

    <!-- Content -->
    <string name="label_page_1_title">Accept a Job</string>
    <string name="label_page_2_title">Load Package</string>
    <string name="label_page_3_title">Tracking Realtime</string>
    <string name="label_page_4_title">Earn Money</string>
    <string name="label_page_1_msg">Work with your convenience, take the job whenever you need it.</string>
    <string name="label_page_2_msg">Load the package from the warehouse and start the trip.</string>
    <string name="label_page_3_msg">Know where your package is currently located with the real-time tracking.</string>
    <string name="label_page_4_msg">Take up the number of jobs and increase your earnings</string>


    <!-- Error Messages -->
    <string name="error">Error</string>
    <string name="error_message">Something went wrong at our end!</string>
    <string name="error_email_mobile_empty">Enter Email / Mobile No</string>
    <string name="error_email_empty">Enter Email Id</string>
    <string name="error_invalid_mobile_no">Invalid Mobile No</string>
    <string name="error_invalid_email_id">Invalid Email Id</string>
    <string name="error_password_empty">Enter password</string>
    <string name="error_password_length">Password length should be min 6 digits</string>
    <string name="error_password_not_match">Password and confirm password doesn\'t match</string>
    <string name="error_internet">Check your internet connection and try again</string>
    <string name="error_firebase_id">Firebase Id not found</string>
    <string name="error_firebase_token">Firebase message token id cannot be generated</string>
    <string name="error_user_register">Unable to register user</string>

    <string name="notification_content_title">Track</string>
    <string name="notification_content_text">App is running</string>
    <string name="notification_action_launch">Launch app</string>
    <string name="notification_action_stop">Stop</string>
    <string name="service_state_started">Stop</string>
    <string name="service_state_stopped">Start</string>

</resources>