<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhiteLight">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/padding_small">

        <com.google.android.material.textview.MaterialTextView
            android:id="@id/tvName"
            style="@style/Widget.TextView.Large.Bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:padding="@dimen/padding_small"
            android:text="@string/forgot_password" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@id/tvMessage"
            style="@style/Widget.TextView.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:padding="@dimen/padding_small"
            android:text="@string/reset_password_message" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@id/ivImage"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="@dimen/margin_small"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/forgot_password" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.TextInputLayout.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@id/etUsername"
                style="@style/Widget.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="3dp"
                android:hint="@string/email_id"
                android:inputType="text"
                android:maxLength="25"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorText" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@id/btnSubmit"
            style="@style/Widget.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_medium"
            android:text="@string/reset_password" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>