<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhiteLight">

    <androidx.constraintlayout.widget.Guideline
        android:id="@id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@id/ivImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_launcher_icon" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/Widget.TextView.Large.Bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/sign_up"
            android:textColor="@color/colorGreyDark"
            android:textSize="@dimen/text_size_twenty_six" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/Widget.TextView.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/sign_up_to_register"
            android:textColor="@color/colorGreyMedium"
            android:textSize="@dimen/text_size_fourteen" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline1">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.TextInputLayout.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@id/etUsername"
                style="@style/Widget.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="3dp"
                android:hint="@string/email_id"
                android:inputType="text"
                android:maxLength="25"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorText" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.TextInputLayout.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorGreyDark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="3dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="25"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorText" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.TextInputLayout.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorGreyDark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/colorWhite"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="3dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:maxLength="25"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorText" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@id/btnSubmit"
            style="@style/Widget.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_medium"
            android:text="@string/sign_up" />

        <LinearLayout
            android:id="@+id/linSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="visible">

            <com.google.android.material.textview.MaterialTextView
                style="@style/Widget.TextView.Medium.SemiBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/already_have_account"
                android:textColor="@color/colorGreyMedium" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/Widget.TextView.Medium.SemiBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_small"
                android:text="@string/sign_in_here"
                android:textColor="@color/colorAppPrimary"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>